// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<undefined /> doesn't show error with showError=false: NotShowingError 1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-ppmla1"
  >
    <div
      class="chakra-form-control css-1kxonj9"
      data-testid="form_control"
      role="group"
    >
      <label
        class="chakra-form__label css-1hfoxt1"
        data-invalid=""
        for="field-:ra:"
        id="field-:ra:-label"
      >
        <div
          class="chakra-stack css-1igwmid"
        >
          <p
            class="chakra-text css-mgupmj"
            data-testid="selector-label"
          >
            Select an option
          </p>
        </div>
      </label>
      <div
        class="css-g2rfke"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-8-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
        />
        <div
          class=" css-oc2fss"
          data-invalid="true"
        >
          <div
            class="css-3y2vuh"
          >
            <span
              class="chakra-text css-1todh3z"
              data-testid="select-placeholder"
            />
            <div
              class=" css-18euh9p"
              data-value=""
            >
              <input
                aria-autocomplete="list"
                aria-describedby="react-select-8-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                aria-invalid="true"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class=" css-10wwmqn"
                id="field-:ra:"
                role="combobox"
                spellcheck="false"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class=" css-hfbj6y"
          >
            <div
              class="css-1aabyhj"
            >
              <svg
                class="chakra-icon css-13otjrl"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="0 0 256 256"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="none"
                  height="256"
                  width="256"
                />
                <polyline
                  fill="none"
                  points="208 96 128 176 48 96"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="16"
                />
              </svg>
            </div>
          </div>
        </div>
        <input
          name="selection"
          type="hidden"
          value=""
        />
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<undefined /> shows error with showErrors=true: ShowingError 1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-ppmla1"
  >
    <div
      class="chakra-form-control css-1kxonj9"
      data-testid="form_control"
      role="group"
    >
      <label
        class="chakra-form__label css-1hfoxt1"
        data-invalid=""
        for="field-:r9:"
        id="field-:r9:-label"
      >
        <div
          class="chakra-stack css-1igwmid"
        >
          <p
            class="chakra-text css-mgupmj"
            data-testid="selector-label"
          >
            Select an option
          </p>
        </div>
      </label>
      <div
        class="css-g2rfke"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-7-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
        />
        <div
          class=" css-oc2fss"
          data-invalid="true"
        >
          <div
            class="css-3y2vuh"
          >
            <span
              class="chakra-text css-1todh3z"
              data-testid="select-placeholder"
            />
            <div
              class=" css-18euh9p"
              data-value=""
            >
              <input
                aria-autocomplete="list"
                aria-describedby="react-select-7-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                aria-invalid="true"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class=" css-10wwmqn"
                id="field-:r9:"
                role="combobox"
                spellcheck="false"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class=" css-hfbj6y"
          >
            <div
              class="css-1aabyhj"
            >
              <svg
                class="chakra-icon css-13otjrl"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="0 0 256 256"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="none"
                  height="256"
                  width="256"
                />
                <polyline
                  fill="none"
                  points="208 96 128 176 48 96"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="16"
                />
              </svg>
            </div>
          </div>
        </div>
        <input
          name="selection"
          type="hidden"
          value=""
        />
      </div>
      <div
        aria-live="polite"
        class="chakra-form__error-message css-10ckq1i"
        data-testid="form-error-msg"
        id="field-:r9:-feedback"
      />
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<undefined /> shows placeholder with default value: DefaultPlaceholder 1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-ppmla1"
  >
    <div
      class="chakra-form-control css-1kxonj9"
      data-testid="form_control"
      role="group"
    >
      <label
        class="chakra-form__label css-1hfoxt1"
        for="field-:r7:"
        id="field-:r7:-label"
      >
        <div
          class="chakra-stack css-1igwmid"
        >
          <p
            class="chakra-text css-mgupmj"
            data-testid="selector-label"
          >
            Select an option
          </p>
        </div>
      </label>
      <div
        class="css-g2rfke"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-5-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
        />
        <div
          class=" css-oc2fss"
        >
          <div
            class="css-3y2vuh"
          >
            <span
              class="chakra-text css-1todh3z"
              data-testid="select-placeholder"
            />
            <div
              class=" css-18euh9p"
              data-value=""
            >
              <input
                aria-autocomplete="list"
                aria-describedby="react-select-5-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class=" css-10wwmqn"
                id="field-:r7:"
                role="combobox"
                spellcheck="false"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class=" css-hfbj6y"
          >
            <div
              class="css-1aabyhj"
            >
              <svg
                class="chakra-icon css-13otjrl"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="0 0 256 256"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="none"
                  height="256"
                  width="256"
                />
                <polyline
                  fill="none"
                  points="208 96 128 176 48 96"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="16"
                />
              </svg>
            </div>
          </div>
        </div>
        <input
          name="selection"
          type="hidden"
          value=""
        />
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<undefined /> shows placeholder with the provided value: CustomPlaceholder 1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-ppmla1"
  >
    <div
      class="chakra-form-control css-1kxonj9"
      data-testid="form_control"
      role="group"
    >
      <label
        class="chakra-form__label css-1hfoxt1"
        for="field-:r8:"
        id="field-:r8:-label"
      >
        <div
          class="chakra-stack css-1igwmid"
        >
          <p
            class="chakra-text css-mgupmj"
            data-testid="selector-label"
          >
            Select an option
          </p>
        </div>
      </label>
      <div
        class="css-g2rfke"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-6-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
        />
        <div
          class=" css-oc2fss"
        >
          <div
            class="css-3y2vuh"
          >
            <span
              class="chakra-text css-1todh3z"
              data-testid="select-placeholder"
            >
              Value of placeholder
            </span>
            <div
              class=" css-18euh9p"
              data-value=""
            >
              <input
                aria-autocomplete="list"
                aria-describedby="react-select-6-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class=" css-10wwmqn"
                id="field-:r8:"
                role="combobox"
                spellcheck="false"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class=" css-hfbj6y"
          >
            <div
              class="css-1aabyhj"
            >
              <svg
                class="chakra-icon css-13otjrl"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="0 0 256 256"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="none"
                  height="256"
                  width="256"
                />
                <polyline
                  fill="none"
                  points="208 96 128 176 48 96"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="16"
                />
              </svg>
            </div>
          </div>
        </div>
        <input
          name="selection"
          type="hidden"
          value=""
        />
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
